# AIFC

./: .gitignore  1  FIX_SOLUTION.md  Makefile  README.md  config.yaml  download_btc_klines.py  example.md  monitor.pid  pyproject.toml  run_agent.sh  run_dashboard.sh  run_monitor.sh  run_rule_strategy.sh  run_workflow.sh  start_production.sh  stop_production.sh  stop_python.sh  time_limit_analysis_report.txt  verify_realized_pnl.py  图片理解.md  图片理解2.md
backend/: .env.example  README.md  config.yaml  pyproject.toml  test_debug_reverse.py
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/api/routes/: alerts.py  backtest.py  config.py  live.py  positions.py  reverse.py  system.py  workflow.py
backend/app/core/: config.py  config_manager.py  events.py
backend/app/models/: schemas.py
backend/app/services/: thread_manager.py
backend/modules/agent/: builder.py  engine.py  state.json  state.py  trade_state.json  workflow_main.py  workflow_runner.py
backend/modules/agent/conditional_edges/: __init__.py  opportunity_screening_edge.py  position_dispatch_edge.py
backend/modules/agent/live_engine/: __init__.py  config.py  engine.py
backend/modules/agent/middleware/: __init__.py  context_injection_middleware.py  decision_verification_middleware.py  (+2 more)
backend/modules/backtest/: __init__.py  context.py  models.py
backend/modules/config/: settings.py
backend/modules/constants/: __init__.py  defaults.py  indicators.py  intervals.py
backend/modules/monitor/: main.py
backend/scripts/: migrate_workflow_traces.py  test_concurrent_render.py
backend/tests/: check_algo_orders.py  test_api_endpoint_selection.py  test_cancelled_limit_orders.py  test_conditional_order_types.py  test_reasoning_content_preservation.py  test_reverse_backtest.py  test_tool_direct_image_return.py  test_toolmessage_image.py
backend/tests/backtest/: test_reinforcement_integration.py
(+524 files in other folders)
